--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
   </head>
   <body>
     <!-- header start -->
-    <header class="header">header</header>
+    <header class="header">
+      <div class="header-container container">
+        <!-- logo -->
+        <a href="#" class="site-logo">
+          <img
+            class="site-logo-image"
+            src="./images/myteam 2.png"
+            alt="myteam"
+            width="160"
+            height="40"
+          />
+        </a>
+        <!-- nav -->
+        <nav class="sitenav">
+          <ul class="sitenav-list">
+            <li class="sitenav-item">
+              <a class="sitenav-link" href="#">home</a>
+            </li>
+            <li class="sitenav-item">
+              <a class="sitenav-link" href="#">about</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Button/link -->
+        <a class="btn btn-white header-btn" href="#"> contact us </a>
+      </div>
+    </header>
     <!-- header end -->
 
     <!-- Main start -->
