--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="site-logo">
           <img
             class="site-logo-image"
-            src="./images/myteam 2.png"
+            src="./images/myteam 2.svg"
             alt="myteam"
             width="160"
             height="40"
@@ -40,11 +40,11 @@
     <!-- header end -->
 
     <!-- Main start -->
-    <main class="main">main</main>
+    <main class="main"></main>
     <!-- Main end -->
 
     <!-- foter start -->
-    <foter class="foter">foter</foter>
+    <foter class="foter"></foter>
     <!-- foter end -->
   </body>
 </html>
