--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
     <!-- header end -->
 
     <!-- Main start -->
-    <main class="main"></main>
+    <main class="main">
+      <section class="hero">
+        <div class="hero-container container">
+          <h1 class="hero-title">
+            Find the best <span class="orange-text">talent</span>
+          </h1>
+          <div class="hero-description">
+            <div class="divider blue-divider hero-divider"></div>
+            <p class="hero-description-text">
+              Finding the right people and building high performing teams can be
+              hard. Most companies aren’t tapping into the abundance of global
+              talent. We’re about to change that.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Main end -->
 
     <!-- foter start -->
