--- a/index.html
+++ b/index.html
@@ -56,6 +56,64 @@
           </div>
         </div>
       </section>
+
+      <section class="service">
+        <div class="service-container container">
+          <div>
+            <div class="divider orange-divider hero-divider"></div>
+            <h2 class="service-title">
+              Build & manage distributed teams like no one else.
+            </h2>
+          </div>
+          <div class="div-service">
+            <ul class="service-list">
+              <li class="service-item">
+                <img
+                  class="service-icon"
+                  src="./images/individuals.svg"
+                  alt="#"
+                />
+                <div class="service-content">
+                  <h3 class="service-item-title">Experienced Individuals</h3>
+
+                  <p class="service-description">
+                    Our network is made up of highly experienced professionals
+                    who are passionate about what they do.
+                  </p>
+                </div>
+              </li>
+              <li class="service-item">
+                <img
+                  class="service-icon"
+                  src="./images/implement.svg"
+                  alt="#"
+                />
+                <div class="service-content">
+                  <h3 class="service-item-title">Easy to Implement</h3>
+                  <p class="service-description">
+                    Our processes have been refined over years of implementation
+                    meaning our teams always deliver.
+                  </p>
+                </div>
+              </li>
+              <li class="service-item">
+                <img
+                  class="service-icon"
+                  src="./images/productiv.svg"
+                  alt="#"
+                />
+                <div class="service-content">
+                  <h3 class="service-item-title">Enhanced Productivity</h3>
+                  <p class="service-description">
+                    Our customized platform with in-built analytics helps you
+                    manage your distributed teams.
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Main end -->
 
