--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                   alt="#"
                 />
                 <div class="service-content">
-                  <h3 class="service-item-title">Experienced Individuals</h3>
+                  <h3 class="service-item-title orange-text">
+                    Experienced Individuals
+                  </h3>
 
                   <p class="service-description">
                     Our network is made up of highly experienced professionals
@@ -89,7 +91,9 @@
                   alt="#"
                 />
                 <div class="service-content">
-                  <h3 class="service-item-title">Easy to Implement</h3>
+                  <h3 class="service-item-title orange-text">
+                    Easy to Implement
+                  </h3>
                   <p class="service-description">
                     Our processes have been refined over years of implementation
                     meaning our teams always deliver.
@@ -103,12 +107,81 @@
                   alt="#"
                 />
                 <div class="service-content">
-                  <h3 class="service-item-title">Enhanced Productivity</h3>
+                  <h3 class="service-item-title orange-text">
+                    Enhanced Productivity
+                  </h3>
                   <p class="service-description">
                     Our customized platform with in-built analytics helps you
                     manage your distributed teams.
                   </p>
                 </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="stories">
+        <div class="stories-container container">
+          <h2 class="stories-itle">
+            Delivering real results for top companies. Some of our
+            <span class="blue-text">success stories.</span>
+          </h2>
+          <div class="stories-list-wrapper">
+            <ul class="stories-list">
+              <li class="stories-item">
+                <p class="stories description">
+                  “The team perfectly fit the specialized skill set required.
+                  They focused on the most essential features helping us launch
+                  the platform eight months faster than planned.”
+                </p>
+                <div class="stories-item-content">
+                  <h3 class="stories-item-owner-name">Kady Baker</h3>
+                  <i class="stories-owner-job">Product Manager at Bookmark</i>
+                </div>
+                <img
+                  class="stories-owner-image"
+                  src="./images/kady-name.svg"
+                  alt=""
+                  width="62"
+                  height="62"
+                />
+              </li>
+              <li class="stories-item">
+                <p class="stories description">
+                  “We needed to automate our entire onboarding process. The team
+                  came in and built out the whole journey. Since going live,
+                  user retention has gone through the roof!”
+                </p>
+                <div class="stories-item-content">
+                  <h3 class="stories-item-owner-name">Aiysha Reese</h3>
+                  <i class="stories-owner-job">Founder of Manage</i>
+                </div>
+                <img
+                  class="stories-owner-image"
+                  src="./images/aiysha-name.svg"
+                  alt=""
+                  width="62"
+                  height="62"
+                />
+              </li>
+              <li class="stories-item">
+                <p class="stories description">
+                  “Amazing. Our team helped us build an app that delivered a new
+                  experience for hiring a physio. The launch was an instant
+                  success with 100k downloads in the first month.”
+                </p>
+                <div class="stories-item-content">
+                  <h3 class="stories-item-owner-name">Arthur Clarke</h3>
+                  <i class="stories-owner-job">Co-founder of MyPhysio</i>
+                </div>
+                <img
+                  class="stories-owner-image"
+                  src="./images/arthur-name.svg"
+                  alt=""
+                  width="62"
+                  height="62"
+                />
               </li>
             </ul>
           </div>
