--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="sitenav-link" href="#">home</a>
             </li>
             <li class="sitenav-item">
-              <a class="sitenav-link" href="#">about</a>
+              <a class="sitenav-link" href="./pages/about.html">about</a>
             </li>
           </ul>
         </nav>
