--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my team</title>
-    <link rel="stylesheet" href="./css/normalaiz.css" />
-    <link rel="stylesheet" href="./css/stayle.css" />
+
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <!-- header start -->
@@ -25,7 +25,7 @@
         <nav class="sitenav">
           <ul class="sitenav-list">
             <li class="sitenav-item">
-              <a class="sitenav-link" href="#">home</a>
+              <a class="sitenav-link" href="#" id="active">home</a>
             </li>
             <li class="sitenav-item">
               <a class="sitenav-link" href="./pages/about.html">about</a>
@@ -211,7 +211,7 @@
           <nav class="sitenav">
             <ul class="sitenav-list">
               <li class="sitenav-item">
-                <a class="sitenav-link" href="#">home</a>
+                <a class="sitenav-link" href="#" id="active">home</a>
               </li>
               <li class="sitenav-item">
                 <a class="sitenav-link" href="#">about</a>
