--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Myteam | About</title>
-    <link rel="stylesheet" href="../css/normalaiz.css" />
-    <link rel="stylesheet" href="../css/stayle.csss" />
+
+    <link rel="stylesheet" href="../css/about.css" />
   </head>
   <body>
     <!-- HEADER START -->
@@ -51,7 +51,7 @@
           <a href="#" class="site-logo">
             <img
               class="site-logo-image"
-              src="..s/images/logo.svg"
+              src="../images/logo.svg"
               alt="myteam"
               width="160"
               height="40"
