--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,74 @@
     </header>
     <!--  HEADER END -->
     <!-- MAIN START -->
-    <main class="main"></main>
+    <main class="main">
+      <section class="hero">
+        <div class="hero-container container">
+          <h1 class="hero-title">About</h1>
+          <div class="hero-content">
+            <div class="divider hero-divider orange-divider"></div>
+            <p class="hero-description">
+              We help companies build dynamic teams made up of top global
+              talent. Using our network of passionate professionals we drive
+              innovation and deliver incredible outcomes. Talented, diverse
+              teams shape the best products and experiences. We’ll bring those
+              teams to you.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="directors">
+        <div class="directors-contaner container">
+          <h2 class="directors-title">Meet the directors</h2>
+          <ul class="directors-list">
+            <li class="directors-list-item">
+              <img src="" alt="" class="directors-item-avatar" />
+              <h3 class="directors-item-title"></h3>
+              <i class="directors-item-level"></i
+              ><button class="direktors-item-show-info-btn"></button>
+            </li>
+            <li class="directors-list-item">
+              <img src="" alt="" class="directors-item-avatar" />
+              <h3 class="directors-item-title"></h3>
+              <i class="directors-item-level"></i
+              ><button class="direktors-item-show-info-btn"></button>
+            </li>
+            <li class="directors-list-item">
+              <img src="" alt="" class="directors-item-avatar" />
+              <h3 class="directors-item-title"></h3>
+              <i class="directors-item-level"></i
+              ><button class="direktors-item-show-info-btn"></button>
+            </li>
+            <li class="directors-list-item">
+              <img src="" alt="" class="directors-item-avatar" />
+              <h3 class="directors-item-title"></h3>
+              <i class="directors-item-level"></i
+              ><button class="direktors-item-show-info-btn"></button>
+            </li>
+            <li class="directors-list-item">
+              <img src="" alt="" class="directors-item-avatar" />
+              <h3 class="directors-item-title"></h3>
+              <i class="directors-item-level"></i
+              ><button class="direktors-item-show-info-btn"></button>
+            </li>
+            <li class="directors-list-item">
+              <img src="" alt="" class="directors-item-avatar" />
+              <h3 class="directors-item-title"></h3>
+              <i class="directors-item-level"></i
+              ><button class="direktors-item-show-info-btn"></button>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="cta">
+        <div class="cta-container container">
+          <h2 class="cta-title">Ready to get started?</h2>
+          <a class="btn btn-white cta-btn" href="#">contact us</a>
+        </div>
+      </section>
+    </main>
     <!-- MAIN END -->
 
     <!-- foter start -->
