--- a/pages/about.html
+++ b/pages/about.html
@@ -62,40 +62,124 @@
           <h2 class="directors-title">Meet the directors</h2>
           <ul class="directors-list">
             <li class="directors-list-item">
-              <img src="" alt="" class="directors-item-avatar" />
-              <h3 class="directors-item-title"></h3>
-              <i class="directors-item-level"></i
-              ><button class="direktors-item-show-info-btn"></button>
+              <img
+                src="../images/avatar-nikita.jpg"
+                alt="avatar"
+                class="directors-item-avatar"
+              />
+              <h3 class="directors-item-title">Nikita Marks</h3>
+              <i class="directors-item-level">Founder & CEO</i>
+              <button class="direktors-item-show-info-btn">
+                <img src="../images/icon-cross.svg" alt="" />
+              </button>
             </li>
             <li class="directors-list-item">
-              <img src="" alt="" class="directors-item-avatar" />
-              <h3 class="directors-item-title"></h3>
-              <i class="directors-item-level"></i
-              ><button class="direktors-item-show-info-btn"></button>
+              <img
+                src="../images/avatar-christian.jpg"
+                alt="avatar"
+                class="directors-item-avatar"
+              />
+              <h3 class="directors-item-title">Cristian Duncan</h3>
+              <i class="directors-item-level">Co-founder & COO</i>
+              <button class="direktors-item-show-info-btn">
+                <img src="../images/icon-cross.svg" alt="" />
+              </button>
             </li>
             <li class="directors-list-item">
-              <img src="" alt="" class="directors-item-avatar" />
-              <h3 class="directors-item-title"></h3>
-              <i class="directors-item-level"></i
-              ><button class="direktors-item-show-info-btn"></button>
+              <img
+                src="../images/avatar-cruz.jpg"
+                alt="avatar"
+                class="directors-item-avatar"
+              />
+              <h3 class="directors-item-title">Cruz Hamer</h3>
+              <i class="directors-item-level">Co-founder & CTO</i>
+              <button class="direktors-item-show-info-btn">
+                <img src="../images/icon-cross.svg" alt="" />
+              </button>
             </li>
             <li class="directors-list-item">
-              <img src="" alt="" class="directors-item-avatar" />
-              <h3 class="directors-item-title"></h3>
-              <i class="directors-item-level"></i
-              ><button class="direktors-item-show-info-btn"></button>
+              <img
+                src="../images/avatar-drake.jpg"
+                alt="avatar"
+                class="directors-item-avatar"
+              />
+              <h3 class="directors-item-title">Drake Heaton</h3>
+              <i class="directors-item-level">Business Development Lead</i>
+              <button class="direktors-item-show-info-btn">
+                <img src="../images/icon-cross.svg" alt="" />
+              </button>
             </li>
             <li class="directors-list-item">
-              <img src="" alt="" class="directors-item-avatar" />
-              <h3 class="directors-item-title"></h3>
-              <i class="directors-item-level"></i
-              ><button class="direktors-item-show-info-btn"></button>
+              <img
+                src="../images/avatar-griffin.jpg"
+                alt="avatar"
+                class="directors-item-avatar"
+              />
+              <h3 class="directors-item-title">Griffin Wise</h3>
+              <i class="directors-item-level">Lead Marketing</i>
+              <button class="direktors-item-show-info-btn">
+                <img src="../images/icon-cross.svg" alt="" />
+              </button>
             </li>
             <li class="directors-list-item">
-              <img src="" alt="" class="directors-item-avatar" />
-              <h3 class="directors-item-title"></h3>
-              <i class="directors-item-level"></i
-              ><button class="direktors-item-show-info-btn"></button>
+              <img
+                src="../images/avatar-aden.jpg"
+                alt="avatar"
+                class="directors-item-avatar"
+              />
+              <h3 class="directors-item-title">Aden Allan</h3>
+              <i class="directors-item-level">Head of Talent</i>
+              <button class="direktors-item-show-info-btn">
+                <img src="../images/icon-cross.svg" alt="" />
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="clients">
+        <div class="clients-container container">
+          <h2 class="clients-title">Some of our clients</h2>
+          <ul class="clients-logo-list">
+            <li class="clients-logo-item">
+              <img
+                src="../images/logo-the-verge.png"
+                alt=""
+                width="165"
+                height="28"
+              />
+            </li>
+            <li class="clients-logo-item">
+              <img
+                src="../images/logo-jakarta-post.png"
+                alt=""
+                width="184"
+                height="23"
+              />
+            </li>
+            <li class="clients-logo-item">
+              <img
+                src="../images/logo-the-guardian.png"
+                alt=""
+                width="180"
+                height="28"
+              />
+            </li>
+            <li class="clients-logo-item">
+              <img
+                src="../images/logo-tech-radar.png"
+                alt=""
+                width="165"
+                height="28"
+              />
+            </li>
+            <li class="clients-logo-item">
+              <img
+                src="../images/logo-gadgets-now.png"
+                alt=""
+                width="98"
+                height="45"
+              />
             </li>
           </ul>
         </div>
