--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,9 @@
         </nav>
 
         <!-- Button/link -->
-        <a class="btn btn-white header-btn" href="#"> contact us </a>
+        <a class="btn btn-white header-btn" href="./contact.html">
+          contact us
+        </a>
       </div>
     </header>
     <!--  HEADER END -->
@@ -188,7 +190,7 @@
       <section class="cta">
         <div class="cta-container container">
           <h2 class="cta-title">Ready to get started?</h2>
-          <a class="btn btn-white cta-btn" href="#">contact us</a>
+          <a class="btn btn-white cta-btn" href="./contact.html">contact us</a>
         </div>
       </section>
     </main>
