--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </nav>
 
         <!-- Button/link -->
-        <a class="btn btn-white header-btn" href="#"> contact us </a>
+        <a class="btn btn-white header-btn" href="./pages/contact.html">
+          contact us
+        </a>
       </div>
     </header>
     <!-- header end -->
@@ -187,7 +189,9 @@
       <section class="cta">
         <div class="cta-container container">
           <h2 class="cta-title">Ready to get started?</h2>
-          <a class="btn btn-white cta-btn" href="#">contact us</a>
+          <a class="btn btn-white cta-btn" href="./pages/contact.html"
+            >contact us</a
+          >
         </div>
       </section>
     </main>
