--- a/pages/contact.html
+++ b/pages/contact.html
@@ -94,7 +94,47 @@
                   </li>
                 </ul>
               </div>
-              <div class="hero-form"></div>
+              <div class="hero-form-wrapper">
+                <form class="hero-form">
+                  <div class="hero-form-control">
+                    <input
+                      class="hero-form-input"
+                      type="text"
+                      placeholder="Name"
+                    />
+                  </div>
+                  <div class="hero-form-control">
+                    <input
+                      class="hero-form-input"
+                      type="text"
+                      placeholder="Email Address"
+                    />
+                  </div>
+                  <div class="hero-form-control">
+                    <input
+                      class="hero-form-input"
+                      type="text"
+                      placeholder="Company Name"
+                    />
+                  </div>
+                  <div class="hero-form-control">
+                    <input
+                      class="hero-form-input"
+                      type="text"
+                      placeholder="Title"
+                    />
+                  </div>
+                  <div class="hero-form-control">
+                    <textarea
+                      class="hero-form-texteria"
+                      name=""
+                      id=""
+                      placeholder="Message"
+                    ></textarea>
+                  </div>
+                  <button class="btn btn-white hero-btn">Submit</button>
+                </form>
+              </div>
             </div>
           </section>
         </main>
